# pyscicat

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  genindex.html  index.html  ingestor.py  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-hdf5.txt  requirements.txt  search.html  setup.cfg  setup.py
.github/workflows/: integration-testing.yml  publish-documentation.yml  publish.yml  testing.yml
_modules/: index.html
_modules/pyscicat/: client.html
_static/: documentation_options.js
continuous-integration/scripts/: install.sh
continuous_integration/scripts/: install.sh
docs/: .buildinfo  genindex.html  index.html  ingesting.md  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pyscicat/: client.html
docs/_static/: documentation_options.js
docs/howto/: ingest.html
docs/reference/: api.html  design.html  release-history.html
docs/source/: conf.py  index.md  installation.md
docs/source/howto/: ingest.md  ingestion_simulation_dataset_ess.md
doctrees/: index.doctree  installation.doctree
doctrees/howto/: ingest.doctree
doctrees/reference/: api.doctree  design.doctree  release-history.doctree
examples/: ingest_dataset.py  ingestion_simulation_dataset_ess.py  ingestion_sumulation_dataset_ess.py
examples/data/: ingestion_simulation_dataset_ess_config.json  ingestion_simulation_dataset_ess_dataset.json  ingestion_simulation_dataset_ess_derived_dataset.json  ingestion_simulation_dataset_ess_raw_dataset.json  published_data.json
hdf5scicattools/: _version.py  extractscientificmetadata.py  h5tools.py  hdf5sct_unittest.py
hdf5scicattools/_tests/: hdf5sct_unittest.py  test_hdf5sct.py
howto/: ingest.html
html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html
html/_modules/: index.html
html/_modules/pyscicat/: client.html
html/_sources/: index.md.txt  installation.md.txt
html/_sources/howto/: ingest.md.txt
html/_sources/reference/: api.md.txt  design.md.txt  release-history.md.txt
html/_static/: documentation_options.js
html/howto/: ingest.html
html/reference/: api.html  design.html  release-history.html
pyscicat/: .buildinfo  __init__.py  _version.py  client.py  genindex.html  index.html  installation.html  model.py  objects.inv  py-modindex.html  search.html
pyscicat/_modules/: index.html
pyscicat/_modules/pyscicat/: client.html
pyscicat/_static/: documentation_options.js
pyscicat/hdf5/: extractscientificmetadata.py  h5tools.py  scientific_metadata.py
pyscicat/hdf5/_tests/: test_hdf5sct.py
pyscicat/hdf5/_tests/testdata/: cylinderHex_r5_s12_T50_large_ranW_0p5.nxs
pyscicat/howto/: ingest.html
pyscicat/reference/: api.html  design.html  release-history.html
pyscicat/tests/: test_client.py  test_new_dataset.py  test_suite_2.py  tests_local.py
reference/: api.html  design.html  release-history.html
tests/test_hdf5/: test_hdf5sct.py
tests/test_pyscicat/: test_client.py  test_suite_2.py  tests_integration.py  tests_local.py
tests/tests_integration/: test_integration.py  tests_integration.py
