[versioneer]
VCS = git
style = pep440-post
versionfile_source = pyscicat/_version.py
versionfile_build = pyscicat/_version.py
tag_prefix = v

[metadata]

name = pyscicat
description = a python API to communicate with the Scicat API
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan McReynolds
author_email = dmcreynolds@lbl.gov
url = https://github.com/scicatproject/pyscicat
license_files = LICENSE
license=BSD (3-clause)
classifiers=
        Development Status :: 2 - Pre-Alpha
        Natural Language :: English
        Programming Language :: Python :: 3.7


[options]
include_package_data = True
packages= find:
install_requires =
    pydantic
    requests

python_requires  = >=3.7



[options.extras_require]
hdf5 =
    hdf5plugin
    h5py
dev =
    codecov
    coverage
    flake8
    pytest
    sphinx
    twine
    black
    requests_mock
docs =
    ipython
    matplotlib
    mistune <2.0.0  # temporary while sphinx sorts this out
    myst-parser
    numpydoc
    sphinx-click
    sphinx-copybutton
    sphinxcontrib.openapi
    sphinx_rtd_theme

[options.packages.find]
exclude =
      continuous_integration
